[package]
name = "blackjack-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }

# serde_json is just for the example, not required in general
serde_json = "1.0"
strum_macros = "0.26.1"
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
anyhow = "1.0.79"
tokio-util = "0.7.10"
mongodb = "2.8.1"
