[package]
name = "blackjack-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }

# serde_json is just for the example, not required in general
serde_json = "1.0"
strum_macros = "0.26.1"
axum = { version = "0.7.4", features = ["ws"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio = { version = "1.36.0", features = ["full", "sync"] }
tower = { version = "0.4.13", features = ["util"] }
anyhow = "1.0.79"
tokio-tungstenite = "0.21"
tokio-util = "0.7.10"
mongodb = "2.8.1"
tower-http = { version = "0.5.2", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http = "1.0.0"
strum = { version = "0.26.2", features = ["derive"] }
rand = { version = "0.8.5", features = ["std", "std_rng"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
headers = "0.4.0"
tokio-stream = "0.1.15"
time = "0.3.36"
